--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       - listing
     environment:
       MONGODB: "mongodb://mongodb1:27017,mongodb2:27017/AssignmentDB?replicaSet=rs0"
+      PYTHONUNBUFFERED: 1
     networks:
       - internal-network
       - bridge-network
